--- a/scripts/lab8.Rmd
+++ b/scripts/lab8.Rmd
@@ -54,12 +54,27 @@ output            : papaja::apa6_pdf
 ```{r setup, include = FALSE}
 library("papaja")
 r_refs("r-references.bib")
+library(tidyverse)
+library(rio)
+library(janitor)
+library(papaja)
+library(tinytex)
+library(knitr)
+library(psych)
+library(here)
+
+here()
 ```
 
 ```{r analysis-preferences}
 # Seed for random number generation
 set.seed(42)
 knitr::opts_chunk$set(cache.extra = knitr::rand_seed)
+```
+
+```{r}
+data = import(here("data", "star.csv"), setclass = "tbl_df")
+kable(head(data), caption = "Brief look at the dataset" )
 ```
 
 
@@ -92,3 +107,5 @@ We used `r cite_r("r-references.bib")` for all our analyses.
 
 <div id="refs" custom-style="Bibliography"></div>
 \endgroup
+
+
